// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hMR transformation > should add HMR metadata to components 1`] = `
"import { template as _template$ } from "essor";
const _t$ = _template$("<div>Hello");
import { createComponent } from 'essor';
function App() {
  return _t$();
}
App.__signature = "1b4tsqg";
App.__hmrId = "1q9dts2:App";
const __$registry$__ = [App];"
`;

exports[`hMR transformation > should handle multiple createComponent aliases 1`] = `
"import { template as _template$, child as _child$, createComponent as _createComponent$, insert as _insert$ } from "essor";
const _t$2 = _template$("<div>");
const _t$ = _template$("<div>Counter");
import { createApp, signal } from 'essor';
function Counter() {
  return _t$();
}
Counter.__signature = "1dpi21a";
Counter.__hmrId = "1q9dts2:Counter";
function App() {
  function Counter1() {
    function Counter2() {
      return _t$();
    }
    return _t$();
  }
  return (() => {
    const _root$ = _t$2();
    const _n$ = _child$(_root$);
    _insert$(_root$, __$createHMRComponent$__(Counter, {}), _n$);
    return _root$;
  })();
}
App.__signature = "jtt6lc";
App.__hmrId = "1q9dts2:App";
createApp(__$createHMRComponent$__(App), 'root');
const __$registry$__ = [Counter, App];"
`;

exports[`hMR transformation > should not transform when HMR is disabled 1`] = `
"import { template as _template$ } from "essor";
const _t$ = _template$("<div>Hello");
import { createComponent as cc } from 'essor';
function App() {
  return _t$();
}
cc(App);"
`;

exports[`hMR transformation > should replace user import alias (cc) with HMR component 1`] = `
"import { template as _template$ } from "essor";
const _t$ = _template$("<div>Hello");
import { createComponent as cc } from 'essor';
function App() {
  return _t$();
}
App.__signature = "1b4tsqg";
App.__hmrId = "1q9dts2:App";
cc(App);
const __$registry$__ = [App];"
`;

exports[`hMR transformation > should transform createApp to create with HMR component 1`] = `
"import { template as _template$ } from "essor";
const _t$ = _template$("<div>Hello");
import { createApp } from 'essor';
function App() {
  return _t$();
}
App.__signature = "1b4tsqg";
App.__hmrId = "1q9dts2:App";
createApp(__$createHMRComponent$__(App), 'root');
const __$registry$__ = [App];"
`;
